--- a/5_5-1 Understand inline, block, inline-block elements/pseudo-box/block.html
+++ b/5_5-1 Understand inline, block, inline-block elements/pseudo-box/block.html
@@ -10,6 +10,8 @@
             background-color: lightcoral;
             width: 300px;
             height: 200px;
+            margin-top: 10%;
+            margin-bottom: 3%;
         }
         h1{
             background-color: blueviolet;
@@ -21,6 +23,16 @@
             width: 300px;
             margin-right: 100px;
             display: inline-block;
+        }
+        h2{
+            background-color: aquamarine;
+            margin-top: 3%;
+            margin-bottom: 3%;
+            margin-left: 2%;
+            margin-right: 2%;
+        }
+        p{
+            background-color: aliceblue;
         }
         a{
             color: rgb(255, 0, 0);
@@ -42,21 +54,7 @@
     <a href="https://www.facebook.com/">facebook</a>
     <a href="https://www.facebook.com/">facebook</a>
     <a href="https://www.facebook.com/">facebook</a>
-
-    <!-- <div></div>
-    <div></div>
-    <div></div> -->
-
-    <!-- <div>
-        <h2></h2>
-    </div>
-    <div>
-        <h2></h2>
-    </div>
-    <div>
-        <h2></h2>
-    </div> -->
-
+    
     <div>
         <h2>Room-1</h2>
         <p>Lorem ipsum</p>
